--- a/src/quizes.html
+++ b/src/quizes.html
@@ -11,40 +11,6 @@
         /* Additional CSS */
         @import url('quizes.css');
     </style>
-
-    <style>
-        .tongue-nav {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-        }
-
-        .tongue {
-            width: 0;
-            height: 0;
-            border-left: 10px solid transparent;
-            border-right: 10px solid transparent;
-            border-bottom: 10px solid #F2EDE6;
-            position: absolute;
-        }
-
-        .header-v2:after {
-            content: "";
-            z-index: 99;
-            position: absolute;
-            left: 10rem;
-            top: 4rem;
-            border: 0.5rem solid rgba(0, 0, 0, 0);
-            border-top: 0.5rem solid var(--white);
-        }
-
-        @media (min-width: 768px) {
-            .header-v2:after {
-                left: 19rem;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -66,45 +32,10 @@
         </div>
     </div>
 
-    <!-- Navigation -->
-    <header class="text-gray-600 body-font bg-black header-v2">
-        <div class="container mx-auto flex flex-wrap p-5 px-0 flex-col md:flex-row items-center">
-            <div class="flex title-font space-x-6 md:space-x-8 font-medium items-center text-white mb-4 md:mb-0">
-                <div class="text-white md:hidden block mr-2 md:mr-0">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M3 6h18v2H3zm0 5h18v2H3zm0 5h18v2H3z" />
-                    </svg>
-                </div>
-                <img src="https://www.lumni.fr/images/logos/logo.svg" class="md:pr-10">
-
-                <div class="flex items-center space-x-4 text-sm tongue-nav">
-                    <button type="button" class="font-light md:border-l border-white md:pl-10">I AM: &nbsp;</button>
-                    <button type="button">PUPIL</button>
-                    <button type="button" class="text-sm font-light border-l border-white pl-10">TEACHER</button>
-                    <span class="tongue left-12 md:left-24 mt-24 md:mt-16"></span>
-                </div>
-            </div>
-            <nav
-                class="hidden md:ml-auto md:flex md:flex-wrap md:items-center md:gap-2 text-sm tracking-widest text-white justify-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24">
-                    <path fill="currentColor"
-                        d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z" />
-                </svg>
-                TO SUBSCRIBE TO THE NEWSLETTER, CLICK HERE
-            </nav>
-        </div>
-    </header>
-
     <header class="text-black body-font bg-[#F2EDE6] border-b-2 border-b-gray-300">
         <div class="container mx-auto flex flex-wrap p-5 px-0 flex-col md:flex-row items-center">
             <div class="flex space-x-4 title-font items-center text-gray-900 mb-4 md:mb-0">
-                <a href="#" class="hover:font-bold">Welcome</a>
-                <div class="rounded-full p-[5px] bg-black"></div>
-                <a href="#" class="border-b-2 border-black font-bold hover:font-bold">Primary</a>
-                <div class="rounded-full p-[5px] bg-black"></div>
-                <a href="#" class="hover:font-bold">College</a>
-                <div class="rounded-full p-[5px] bg-black"></div>
-                <a href="#" class="hover:font-bold">High school</a>
+                <img src="https://www.lumni.fr/images/logos/logo-b.svg" alt="">
             </div>
 
             <div class="md:ml-auto flex md:flex-wrap md:items-center text-sm space-x-8 justify-center">
@@ -160,6 +91,13 @@
             <div class="w-full ps-11 md:ps-0 pb-12 pr-4 md:pr-4 border-b border-b-[#E6DCCF]">
                 <div class="flex space-x-4">
                     <div class="w-full">
+                        <div class="relative shadow-container p-3 bg-white rounded-xl mb-8 flex  justify-center">
+                            <!-- Start Quiz Button -->
+                            <button class="absolute bottom-10 z-20 font-semibold py-4 px-8 bg-[#3F52FF] rounded-xl text-white">Start the quiz</button>
+                            <img src="https://medias.lumni.fr/1Dydv0LYj0n8-RhE51FXFqsSw4Q/828x466/filters:focal(0x0:0x0):quality(85):max_bytes(120000)/6352b6ac9b16b185220bf38a" class="rounded-xl object-cover" />
+                        </div>
+
+                        <!-- start quiz -->
                         <div class="rounded-xl bg-white border border-b-[#E6DCCF] p-8 shadow-container">
                             <div class="flex items-center space-x-4 justify-between">
                                 <div class="flex items-center text-xs font-semibold space-x-4">
@@ -319,7 +257,8 @@
                             On the same topic
                         </div>
 
-                        <div class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
+                        <div
+                            class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
                             <span class="absolute top-0 left-0 p-1 px-3 z-10 text-xs bg-white font-semibold"
                                 style="border-radius: 0.75rem 0 0.75rem 0;">Article</span>
 
@@ -348,7 +287,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
+                        <div
+                            class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
                             <span class="absolute top-0 left-0 p-1 px-3 z-10 text-xs bg-white font-semibold"
                                 style="border-radius: 0.75rem 0 0.75rem 0;">Article</span>
 
@@ -377,7 +317,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
+                        <div
+                            class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
                             <span class="absolute top-0 left-0 p-1 px-3 z-10 text-xs bg-white font-semibold"
                                 style="border-radius: 0.75rem 0 0.75rem 0;">Video</span>
 
@@ -406,7 +347,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
+                        <div
+                            class="rounded-xl p-3 shadow-lg bg-white relative cursor-pointer transform transition-transform duration-500 ease-in-out hover:scale-105">
                             <span class="absolute top-0 left-0 p-1 px-3 z-10 text-xs bg-white font-semibold"
                                 style="border-radius: 0.75rem 0 0.75rem 0;">Restricted</span>
 
