--- a/src/english.html
+++ b/src/english.html
@@ -7,7 +7,7 @@
     <title>Lumnis</title>
     <style>
         @import url('lumnis.css');
-        @import url('output.css');
+        @import url('english-responsive.css');
     </style>
 </head>
 
@@ -94,7 +94,7 @@
 
                     <!-- Tags -->
                     <div
-                        class="w-full grid grid-cols-2 gap-3 md:flex md:flex-wrap md:items-center md:justify-center md:space-x-4 mb-3 text-text-title text-sm font-semibold">
+                        class="w-full grid grid-cols-2 gap-3 md:gap-0 md:flex md:flex-wrap md:items-center md:justify-center md:space-x-4 mb-3 text-text-title text-sm font-semibold">
                         <button
                             class="flex items-center  hover:bg-hover-gray rounded-full p-3 px-4 bg-black text-white gap-2 border border-b-2 border-black">
                             All
@@ -124,7 +124,7 @@
                             family
                         </button>
                     </div>
-                    <div class="w-full grid grid-cols-2 gap-3 md:flex md:flex-wrap md:items-center md:justify-center md:space-x-4 mb-3 text-text-title text-sm font-semibold">
+                    <div class="w-full grid grid-cols-2 gap-3 md:gap-0 md:flex md:flex-wrap md:items-center md:justify-center md:space-x-4 mb-3 text-text-title text-sm font-semibold">
                         <button
                             class="flex items-center hover:bg-hover-gray rounded-full p-3 px-4 bg-white gap-2 border border-b-2 border-black">
                             UNITED STATES
@@ -164,7 +164,7 @@
             <div class="hidden md:block w-1/3 max-w-[280px]"></div>
             <div class="w-full ps-11 md:ps-0 pb-12 pr-4 md:pr-8">
 
-                <div class="w-full grid grid-cols-2 gap-3 md:flex md:flex-wrap mt-4 md:items-center md:justify-center md:space-x-4 mb-3 text-text-title text-sm font-semibold">
+                <div class="w-full grid grid-cols-2 gap-3 md:gap-0 md:flex md:flex-wrap mt-4 md:items-center md:justify-center md:space-x-4 mb-3 text-text-title text-sm font-semibold">
                     <button
                         class="flex items-center hover:bg-hover-gray  rounded-full p-2 px-4 bg-black text-white gap-2 border border-b-2 border-black">
                         All (111)
