--- a/src/quizes.html
+++ b/src/quizes.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizes</title>
     <style>
-        /* @import url('lumnis.css'); */
-
         /* Additional CSS */
         @import url('quizes.css');
     </style>
@@ -16,7 +14,7 @@
 <body>
 
     <!-- Sidebar -->
-    <div class="hidden lg:block fixed top-52 left-11 h-[400px] w-52 overflow-auto z-20 bg-white border rounded-xl">
+    <div class="hidden lg:block fixed top-36 left-11 h-[400px] w-52 overflow-auto z-20 bg-white border rounded-xl">
         <div class="flex flex-col space-y-2">
             <a href="#" class="p-3 pt-4 border-t border-t-[#c9c3ba] border-l-4 border-l-[#3F52FF]">Math</a>
             <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">French</a>
@@ -89,7 +87,7 @@
         <div class="flex">
             <div class="hidden md:block w-1/3 max-w-[280px]"></div>
             <div class="w-full ps-11 md:ps-0 pb-12 pr-4 md:pr-4 border-b border-b-[#E6DCCF]">
-                <div class="flex space-x-4">
+                <div class="flex md:space-x-4 md:flex-row flex-col">
                     <div class="w-full">
                         <div class="relative shadow-container p-3 bg-white rounded-xl mb-8 flex  justify-center">
                             <!-- Start Quiz Button -->
@@ -98,7 +96,7 @@
                         </div>
 
                         <!-- start quiz -->
-                        <div class="rounded-xl bg-white border border-b-[#E6DCCF] p-8 shadow-container">
+                        <div class="rounded-xl bg-white border border-b-[#E6DCCF] p-4 md:p-8 shadow-container">
                             <div class="flex items-center space-x-4 justify-between">
                                 <div class="flex items-center text-xs font-semibold space-x-4">
                                     <img src="https://www.lumni.fr/images/icons/histoire.svg" class="max-w-8">
@@ -112,7 +110,7 @@
 
                             <!-- inner div -->
                             <div
-                                class="grid place-items-center relative text-center  mt-2 px-16 pb-16 bg-[#F8F8F8] rounded">
+                                class="grid place-items-center relative text-center  mt-2 px-2 md:px-16 pb-16 bg-[#F8F8F8] rounded">
 
                                 <div class="space-y-6 w-full">
                                     <p class="text-lg">When is Halloween?</p>
@@ -252,8 +250,9 @@
                             </p>
                         </div>
                     </div>
-                    <div class="w-2/4 space-y-4">
-                        <div class="rotate-4 p-4 mb-8 bg-white text-2xl font-bold max-w-72 text-center">
+                    <div class="md:w-2/4 space-y-4 mt-6 md:mt-0">
+                        <!-- md:rotate-4 p-4 mb-8 bg-white text-2xl font-bold md:max-w-72 text-center -->
+                        <div class="md:rotate-4 py-3 md:py-4 px-1 mb-6 md:mb-8 bg-white text-xl md:text-2xl font-bold md:max-w-72 text-center">
                             On the same topic
                         </div>
 
