add hamburger menu on landing page's mobile

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,10 @@
 <body>
     <header class="mx-auto px-4">
         <nav class="h-20 flex flex-col gap-4 md:flex-row md:items-center md:justify-between">
-            <div class="flex items-center gap-32">
+            <div class="flex items-center md:gap-32 justify-between">
                 <!-- Dropdown -->
                 <div
-                    class="hover:bg-black bg-black md:bg-white text-white rounded-lg flex items-center gap-2 p-2 pl-4 pr-2 cursor-pointer">
+                    class="hover:bg-black bg-black md:bg-white text-white rounded-lg hidden md:flex md:items-center md:gap-2 p-2 pl-4 pr-2 cursor-pointer">
                     <img class="max-w-w-[32px] max-h-[32px]"
                         src="https://static.parastorage.com/services/linguist-flags/1.663.0/assets/flags/round/HKG.png" />
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
@@ -40,9 +40,13 @@
                 <a href="#">
                     <img src="images/starkid-logo.png" alt="">
                 </a>
+
+                <div class="text-black cursor-progress md:hidden">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" viewBox="0 0 24 24"><path fill="currentColor" d="M4 17.27v-1h16v1zm0-4.77v-1h16v1zm0-4.77v-1h16v1z"/></svg>
+                </div>
             </div>
 
-            <div class="flex space-x-3 md:space-x-7 -mt-3 text-xs md:text-lg">
+            <div class="hidden md:flex space-x-3 md:space-x-7 -mt-3 text-xs md:text-lg">
                 <a href="#">關於我們</a>
                 <a href="#">為何選擇我們</a>
                 <a href="#">課程框架</a>
@@ -54,7 +58,7 @@
     </header>
 
     <!-- Hero banner -->
-    <section class="mt-8 md:mt-0">
+    <section class=" md:mt-0">
         <div class="relative flex flex-col-reverse md:flex-col">
             <div
                 class="flex flex-col  items-center text-center md:text-white space-y-4 py-12 md:py-0 md:absolute md:top-32 md:right-60 max-w-lg">
