--- a/src/quizes.html
+++ b/src/quizes.html
@@ -8,6 +8,7 @@
     <style>
         /* Additional CSS */
         @import url('quizes.css');
+        @import url('output.css');
     </style>
 </head>
 
