compile tailwindcss into ouput-css

--- a/src/english.html
+++ b/src/english.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumnis</title>
     <style>
-        @import url('lumnis.css');
-        @import url('english-responsive.css');
+        /* @import url('lumnis.css');
+        @import url('english-responsive.css'); */
+        @import url('output.css');
     </style>
 </head>
 
