--- a/src/lumni.html
+++ b/src/lumni.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumnis</title>
     <style>
-        @import url('lumnis.css');
+        /* @import url('lumnis.css'); */
+        @import url('output.css');
     </style>
 </head>
 
