--- a/src/quizes.html
+++ b/src/quizes.html
@@ -7,7 +7,8 @@
     <title>Quizes</title>
     <style>
         /* Additional CSS */
-        @import url('quizes.css');
+        /* @import url('quizes.css'); */
+        @import url('output.css');
     </style>
 </head>
 
