make forclosure page resdponsive

--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -49,7 +49,7 @@
     <section class="bg-[#C4D6DA] py-4 h-28 bg-no-repeat bg-center bg-scroll bg-cover"
         style="background-image: url(images/inner-page-header-image.jpg);">
         <div class="md:px-16 px-4">
-            <h3 class="text-4xl">Get In Touch With Us!</h3>
+            <h3 class="md:text-4xl text-2xl">Get In Touch With Us!</h3>
             <div class="flex items-center  mt-4">
                 <a href="#" class="text-blue-600 hover:text-blue-600">Home</a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" class="text-blue-600"
