--- a/src/foreclosure.html
+++ b/src/foreclosure.html
@@ -30,6 +30,30 @@
                 margin-top: -14px;
             }
         }
+
+        .sub-menu {
+            display: none;
+            position: absolute;
+            /* top: 100%; */
+            top: calc(100% + 10px);
+            z-index: 1;
+        }
+
+        #dropdownNavbarLink:hover .sub-menu,
+        #dropdownNavbarLink:hover::after {
+            display: block;
+        }
+
+        /* Without this, the submenu will always dissappear as soon as you move away from #dropdownNavbarLink */
+        #dropdownNavbarLink::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 0;
+            /* same as the gap */
+            height: 10px;
+            width: 100%;
+        }
     </style>
 </head>
 
@@ -68,6 +92,42 @@
             class="w-full md:hidden font-semibold uppercase py-3 mb-6 md:mb-0 mx-auto flex justify-center text-white rounded bg-[#20C85F]">
             get an offer
         </button>
+    </header>
+
+    <header id="menuContainer" class="hidden md:block text-gray-600 body-font">
+        <div class="bg-[#20C85F] px-14 flex flex-wrap p-5 py-2 flex-col md:flex-row items-center">
+            <a href="#" class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+                    <path fill="currentColor" d="m12 5.69l5 4.5V18h-2v-6H9v6H7v-7.81zM12 3L2 12h3v8h6v-6h2v6h6v-8h3" />
+                </svg>
+            </a>
+            <ul
+                class="md:ml-auto flex flex-wrap items-center space-x-6 text-base text-white font-medium justify-between">
+                <li class="text-[#0D3B66]">Home</li>
+                <!-- <li class="hover:text-[#0D3B66]">About</li> -->
+                <li href="#" class="relative hover:text-[#0D3B66]" id="dropdownNavbarLink">
+                    <div class="flex items-center space-x-2 cursor-pointer">
+                        Services
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path fill="currentColor" d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6z" />
+                        </svg>
+                    </div>
+
+                    <div class="sub-menu absolute -left-4 rounded-lg shadow w-56 bg-white border">
+                        <ul class="py-2 text-sm text-gray-700 divide-y divide-gray-100">
+                            <li>
+                                <a href="#" class="block px-4 py-2 hover:text-[#377ef9]">Foreclosure</a>
+                            </li>
+                            <!-- <li>
+                                <a href="#" class="block px-4 py-2 hover:text-[#377ef9]">Short Sale</a>
+                            </li> -->
+                        </ul>
+                    </div>
+                </li>
+                <!-- <li class="hover:text-[#0D3B66]">Testimonials</li> -->
+                <li class="hover:text-[#0D3B66]">Contact</li>
+            </ul>
+        </div>
     </header>
 
     <!-- content -->
@@ -397,18 +457,25 @@
             </svg>
         </button>
 
-        <div class="flex flex-col items-center justify-center text-center text-text-title mt-20 text-xl space-y-4">
+        <div class="flex flex-col items-center justify-center text-center  text-text-title mt-20 text-xl space-y-4">
             <div class="text-[#0D3B66] hover:text-[#0D3B66]">Home</div>
             <div class="border-b-2 border-b-gray-400 w-52"></div>
-            <div class="hover:text-[#0D3B66]">About</div>
-            <div class="border-b-2 border-b-gray-400 w-52"></div>
-            <div class="hover:text-[#0D3B66]">Services</div>
-            <div class="border-b-2 border-b-gray-400 w-52"></div>
-            <div class="hover:text-[#0D3B66]">Testimonials</div>
+            <div class="w-52 hover:text-[#0D3B66] flex flex-col justify-center items-center">
+                <button type="button" id="mobile-dropdown" class="flex items-center space-x-2 cursor-pointer">
+                    Services
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M7.41 8.58L12 13.17l4.59-4.59L18 10l-6 6l-6-6z" />
+                    </svg>
+                </button>
+
+                <div class="submenu flex flex-col text-left w-full divide-y divide-[#0D3B66] text-base mt-4"
+                    style="display: none;">
+                    <a href="#" class="py-1">Foreclosure</a>
+                    <!-- <a href="#" class="py-1">Dashboard</a> -->
+                </div>
+            </div>
             <div class="border-b-2 border-b-gray-400 w-52"></div>
             <div class="hover:text-[#0D3B66]">Contact</div>
-            <div class="border-b-2 border-b-gray-400 w-52"></div>
-            <div class="hover:text-[#0D3B66]">Forclosure</div>
         </div>
     </div>
 
@@ -424,6 +491,20 @@
 
             closeButton.addEventListener('click', function () {
                 drawer.classList.add('-translate-x-full');
+            });
+
+            var menuLink = document.querySelector("#mobile-dropdown");
+
+            menuLink.addEventListener("click", function ($event) {
+                var x = $event.currentTarget.nextElementSibling;
+                if (x && x.classList.contains('submenu')) {
+                    // x is the next sibling with class 'submenu'
+                    if (x.style.display === "block") {
+                        x.style.display = "none";
+                    } else {
+                        x.style.display = "block";
+                    }
+                }
             });
         });
     </script>
