--- a/src/english.html
+++ b/src/english.html
@@ -15,8 +15,9 @@
 <body>
 
     <!-- Sidebar -->
-    <div class="hidden lg:block fixed top-36 left-11 h-[400px] w-52 overflow-auto z-20 bg-white border rounded-xl">
-        <div class="flex flex-col space-y-2">
+    <div class="hidden lg:block fixed top-36 left-11 h-[400px] w-52 overflow-auto z-20 ">
+        <div class="bg-[#3F52FF] text-white px-3 p-2 rounded-t-xl inline-block">CP</div>
+        <div class="flex flex-col space-y-2 bg-white border rounded-xl">
             <a href="#" class="p-3 pt-4 border-t border-t-[#c9c3ba] border-l-4 border-l-[#3F52FF]">Math</a>
             <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">French</a>
             <a href="#" class="p-3 border-t border-t-[#c9c3ba] hover:font-bold">English</a>
@@ -200,7 +201,7 @@
                 <!-- slider cards -->
                 <div class="grid gap-4 md:grid-cols-3 md:gap-10 mt-8">
                     <div
-                        class="flex flex-col items-center justify-center relative p-3 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        class="flex flex-col items-center justify-center relative p-3 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110 border-b-4 border-b-[#D9CBA5]">
                         <div class="w-full">
                             <img src="https://medias.lumni.fr/tTijySyKdXPFveCxBILFxx9rcSA/276x189/filters:focal(513x562:512x561):quality(80):max_bytes(120000)/5e6fa8f9a8a33618ee014643"
                                 class="w-full rounded-t-[3.5rem] object-cover">
@@ -222,7 +223,7 @@
                             style="border-radius: 0.75rem 0 0.75rem 0;">Case</span>
                     </div>
                     <div
-                        class="flex flex-col items-center justify-center relative p-3 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        class="flex flex-col items-center justify-center relative p-3 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110 border-b-4 border-b-[#D9CBA5]">
                         <div class="w-full">
                             <img src="https://medias.lumni.fr/_GH-WAIpcCkZwzq1ge3WM0JAo_c/276x189/filters:focal(286x270:285x269):quality(80):max_bytes(120000)/5dc2efae2055bf150f783454"
                                 class="w-full rounded-t-[3.5rem] object-cover">
@@ -244,7 +245,7 @@
                             style="border-radius: 0.75rem 0 0.75rem 0;">Case</span>
                     </div>
                     <div
-                        class="flex flex-col items-center justify-center relative p-3 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110">
+                        class="flex flex-col items-center justify-center relative p-3 pb-24 space-y-4 bg-[#F3E5B9] rounded-[3.5rem] transform transition-transform duration-500 ease-in-out hover:scale-110 border-b-4 border-b-[#D9CBA5]">
                         <div class="w-full">
                             <img src="https://medias.lumni.fr/LIHQUuJezTSyGgQ4VAzX18iIolA/276x189/filters:focal(534x601:533x600):quality(80):max_bytes(120000)/5dc2efae2055bf150f78346a"
                                 class="w-full rounded-t-[3.5rem] object-cover">
